# eRgol

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: board.rs  game_files.rs  game_loops.rs  game_structs.rs  globals.rs  kernels.rs  lib.rs  macros.rs  main.rs  render.rs  ui.rs
src/data/: braille.life  spaceship.life
src/seeds/: herschel_loop.life  unit_cell.life
