[package]
name = "eRgol"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
terminal_size = "0.4.0"
rand = "0.9.0-alpha.1"
log = "0.4.21"
lazy_static = "1.5.0"
strum = "0.26.3"
strum_macros = "0.26.4"
env_logger = "0.11.5"
use = "0.0.1-pre.0"
simplelog = "0.12.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

